feat: mock versions of session page and initial ticket page

--- a/src/styles/_feo-config.scss
+++ b/src/styles/_feo-config.scss
@@ -14,5 +14,10 @@ $feo-colors: (
 	//based on 1-BACE, analogue system +/- 20 hue, same saturation, same lightness
 	'o-bace': #117aaa,
 	'bace': #11bace,
-	'u-bace': #11ecab
+	'u-bace': #11ecab,
+	// system colors
+	'error': #ff0000,
+	'u-error': #ffcccc,
+	'info': #0000ff,
+	'u-info': #bbbbff
 );
