--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,15 +1,33 @@
-button {
+button,
+a[data-type='button'] {
 	padding: var(--size-000) var(--size-00);
 	border-radius: var(--size-00);
 	background-color: var(--color-bace);
+	transition: var(--transition-200);
+	font-size: var(--size-0);
+	text-decoration: none;
+	line-height: var(--lh-00);
+}
+
+button:hover,
+a[data-type='button']:hover {
+	background-color: var(--color-o-bace);
 }
 
 button[data-type='secondary'] {
 	background-color: var(--color-gray-300);
 }
 
+button[data-type='secondary']:hover {
+	background-color: var(--color-gray-400);
+}
+
 button[data-type='link'] {
 	background-color: transparent;
+}
+
+button[data-type='link']:hover {
+	text-decoration: underline;
 }
 
 // Ordered list
