--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import '../../node_modules/@crinkles/feo/feo.scss';
 @import 'global';
 @import 'badge';
+@import 'tooltip';
 
 // utilities
 .scale {
