feat: project dashboard, empty states, forms, better state management

--- a/src/styles/_feo-config.scss
+++ b/src/styles/_feo-config.scss
@@ -16,8 +16,8 @@ $feo-colors: (
 	'bace': #11bace,
 	'u-bace': #11ecab,
 	// system colors
-	'error': #ff0000,
-	'u-error': #ffcccc,
-	'info': #0000ff,
-	'u-info': #bbbbff
+	'error': #ce1111,
+	'u-error': #d2b8b8,
+	'info': #1146ce,
+	'u-info': #abb5ce
 );
